@@ -48,7 +48,7 @@ window.Drupal = { behaviors: {}, locale: {} };
   };
 
   Drupal.checkPlain = function (str) {
-    str = str.toString().replace(/&/g, '&amp;').replace(/"/g, '&quot;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+    str = str.toString().replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/"/g, '&quot;').replace(/'/g, '&#39;');
     return str;
   };
 
